--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "@genkit-ai/googleai": "^1.8.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
