--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
@@ -24,6 +25,7 @@
     "@genkit-ai/googleai": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^11.7.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
